--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosso Primeiro Ano juntosss</title>
+    <title>EU TE AMOOOOOOOOO!</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    
 </head>
 <body>
     <header>
